commit to branch

--- a/Teamcsv.ipynb
+++ b/Teamcsv.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b16ab38a-3d4e-45b1-8467-65a76a1226d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +15,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7b7dcc9f-55ec-4a33-9af1-32782719eee9",
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +239,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "1cabae98-cee7-455a-bffe-e23f26068f40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +261,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "9311f295-b243-4e9e-b288-63242070f433",
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +790,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "20c00875-73c7-4c28-aa36-1d9d137ab4a3",
    "metadata": {},
    "outputs": [
     {
@@ -1316,7 +1311,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "95c19847-9ba5-4de3-a64d-c5c0d85bf393",
    "metadata": {},
    "outputs": [
     {
@@ -1691,7 +1685,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "f412401d-25a6-4db7-8ff8-51a1998d6499",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1701,7 +1694,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "442ca1e0-a506-4c2c-bb2e-8cea06733bf9",
    "metadata": {},
    "outputs": [
     {
@@ -1912,7 +1904,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "b6c754c0-46b0-4893-a4f9-db07a49c5396",
    "metadata": {},
    "outputs": [
     {
@@ -2124,7 +2115,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23d97c60-9b2c-49ac-a374-f661966b3b0d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2132,7 +2122,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf5db006-6497-4662-b478-f093f76dd364",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2140,7 +2129,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "3b34ec95-9825-4528-90f1-419ccabf5f93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2150,7 +2138,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "28807887-099f-44ac-84a8-a88ec2101858",
    "metadata": {},
    "outputs": [
     {
@@ -2670,7 +2657,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef56b831-bc43-41ab-b565-4c30360a08c0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2678,7 +2664,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2692,7 +2678,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
