adding LR model

--- a/LRmodel.ipynb
+++ b/LRmodel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "bcaa21e5",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "2ffbbe28",
    "metadata": {},
    "outputs": [
@@ -217,7 +217,7 @@
        "4    92.0   2.0    13.76    -6.71   -0.05  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "39a15c07",
    "metadata": {},
    "outputs": [
@@ -766,7 +766,7 @@
        "4                             0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -776,7 +776,7 @@
     "team_index = com_data['Team']\n",
     "\n",
     "# Remove Opponent, Score, Result\n",
-    "rf_model_data = com_data[['Team', 'Opp', 'TmScore', 'O_1stD', 'O_Tot_yd', 'O_P_Yd', 'O_R_Yd', 'O_TO',\n",
+    "lr_model_data = com_data[['Team', 'Opp', 'TmScore', 'O_1stD', 'O_Tot_yd', 'O_P_Yd', 'O_R_Yd', 'O_TO',\n",
     "                         'D_1stD', 'D_Tot_Yd', 'D_P_Yd', 'D_R_Yd', 'D_TO', 'Home']]\n",
     "#  , 'ADA_Pred_Mean', 'LOG_Prediction'\n",
     "\n",
@@ -784,13 +784,13 @@
     "season_stats = ['O_1stD', 'O_Tot_yd', 'O_P_Yd', 'O_R_Yd', 'O_TO',\n",
     "                         'D_1stD', 'D_Tot_Yd', 'D_P_Yd', 'D_R_Yd', 'D_TO']\n",
     "\n",
-    "rf_model_data[season_stats] = rf_model_data[season_stats] * 16\n",
+    "lr_model_data[season_stats] = lr_model_data[season_stats] * 16\n",
     "\n",
     "#get indexs of every teams\n",
     "team_index = com_data['Team']\n",
     "\n",
-    "rf_model_data = pd.get_dummies(rf_model_data)\n",
-    "rf_model_data.head()"
+    "lr_model_data = pd.get_dummies(lr_model_data)\n",
+    "lr_model_data.head()"
    ]
   },
   {
@@ -803,65 +803,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "a13c3a82",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/envs/dev/lib/python3.7/site-packages/ipykernel_launcher.py:13: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  del sys.path[0]\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.432260869565217\n"
+      "9.217391304347826\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/dev/lib/python3.7/site-packages/sklearn/utils/validation.py:73: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  return f(**kwargs)\n"
      ]
     }
    ],
    "source": [
     "# Random forest\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import r2_score, mean_squared_error, mean_absolute_error\n",
     "\n",
     "# Data processing\n",
-    "X = rf_model_data.drop('TmScore', axis=1).values\n",
-    "y = rf_model_data['TmScore'].values.reshape(-1, 1)\n",
+    "X = lr_model_data.drop('TmScore', axis=1).values\n",
+    "y = lr_model_data['TmScore'].values.reshape(-1, 1)\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size= 0.10)\n",
     "\n",
-    "RF_model = RandomForestRegressor(n_estimators= 2000, random_state= 20)\n",
+    "LR_model = LogisticRegression(C=0.01, solver='liblinear')\n",
     "\n",
-    "RF_model.fit(X_train, y_train)\n",
+    "LR_model.fit(X_train, y_train)\n",
     "\n",
-    "y_pred = RF_model.predict(X_test)\n",
+    "y_pred = LR_model.predict(X_test)\n",
     "\n",
     "print(mean_absolute_error(y_test, y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "3fea6ee4",
    "metadata": {},
    "outputs": [],
    "source": [
     "pd.options.display.max_rows = None\n",
     "\n",
-    "importance = RF_model.feature_importances_\n",
     "\n",
-    "feature_names = rf_model_data.drop('TmScore', axis=1).columns\n",
-    "\n",
-    "d = {'Var_Name': feature_names, 'Imp': importance}\n",
-    "df = pd.DataFrame(data=d)\n",
-    "df = df.sort_values(by= ['Imp'], ascending = False).reset_index(drop=True)\n",
-    "df.head(15)\n",
-    "\n",
-    "# function that return the score of two teams playing\n",
+    "feature_names = lr_model_data.drop('TmScore', axis=1).columns\n",
     "\n",
     "pd.options.display.max_columns = None\n",
     "\n",
@@ -871,8 +863,8 @@
     "    team1 = home_team\n",
     "    team2 = away_team\n",
     "    \n",
-    "    team1_data = rf_model_data[com_data['Team'] == team1].drop('TmScore', axis=1).reset_index(drop=True)\n",
-    "    team2_data = rf_model_data[com_data['Team'] == team2].drop('TmScore', axis=1).reset_index(drop=True)\n",
+    "    team1_data = lr_model_data[com_data['Team'] == team1].drop('TmScore', axis=1).reset_index(drop=True)\n",
+    "    team2_data = lr_model_data[com_data['Team'] == team2].drop('TmScore', axis=1).reset_index(drop=True)\n",
     "    \n",
     "    week_slice = slice(1,16)\n",
     "    \n",
@@ -900,7 +892,7 @@
     "    X_Playoff_test = pd.concat([team1_test, team2_test])\n",
     "    X_Playoff_test.fillna(0, inplace = True) # added to address the NANs that was causing the error\n",
     "    \n",
-    "    scores = RF_model.predict(X_Playoff_test)\n",
+    "    scores = LR_model.predict(X_Playoff_test)\n",
     "    print(team1, \"will score\", round(scores[0], 1))\n",
     "    print(team2, \"will score\", round(scores[1], 1))\n",
     "    \n",
@@ -933,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "0ea06fef",
    "metadata": {},
    "outputs": [
@@ -941,8 +933,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Philadelphia Eagles will score 27.7\n",
-      "Tampa Bay Buccaneers will score 26.9\n",
+      "Philadelphia Eagles will score 24.0\n",
+      "Tampa Bay Buccaneers will score 20.0\n",
       "Philadelphia Eagles are the WINNERS!!!\n"
      ]
     }
@@ -953,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "id": "b22f1f34",
    "metadata": {},
    "outputs": [
@@ -961,9 +953,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "San Francisco 49ers will score 15.5\n",
-      "Dallas Cowboys will score 15.1\n",
-      "San Francisco 49ers are the WINNERS!!!\n"
+      "San Francisco 49ers will score 20.0\n",
+      "Dallas Cowboys will score 20.0\n",
+      "Dallas Cowboys are the WINNERS!!!\n"
      ]
     }
    ],
@@ -973,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "id": "5259e617",
    "metadata": {},
    "outputs": [
@@ -981,8 +973,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Arizona Cardinals will score 15.6\n",
-      "Los Angeles Rams will score 15.3\n",
+      "Arizona Cardinals will score 31.0\n",
+      "Los Angeles Rams will score 20.0\n",
       "Arizona Cardinals are the WINNERS!!!\n"
      ]
     }
@@ -1001,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "id": "d65bca36",
    "metadata": {},
    "outputs": [
@@ -1009,9 +1001,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pittsburgh Steelers will score 15.1\n",
-      "Kansas City Chiefs will score 15.4\n",
-      "Kansas City Chiefs are the WINNERS!!!\n"
+      "Pittsburgh Steelers will score 24.0\n",
+      "Kansas City Chiefs will score 20.0\n",
+      "Pittsburgh Steelers are the WINNERS!!!\n"
      ]
     }
    ],
@@ -1021,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "id": "b435d2a6",
    "metadata": {},
    "outputs": [
@@ -1029,9 +1021,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Las Vegas Raiders will score 15.4\n",
-      "Cincinnati Bengals will score 15.4\n",
-      "Las Vegas Raiders are the WINNERS!!!\n"
+      "Las Vegas Raiders will score 31.0\n",
+      "Cincinnati Bengals will score 31.0\n",
+      "Cincinnati Bengals are the WINNERS!!!\n"
      ]
     }
    ],
@@ -1041,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "id": "208aad61",
    "metadata": {},
    "outputs": [
@@ -1049,9 +1041,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Buffalo Bills will score 15.5\n",
-      "New England Patriots will score 15.4\n",
-      "Buffalo Bills are the WINNERS!!!\n"
+      "Buffalo Bills will score 20.0\n",
+      "New England Patriots will score 24.0\n",
+      "New England Patriots are the WINNERS!!!\n"
      ]
     }
    ],
@@ -1069,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "id": "f6b81e11",
    "metadata": {},
    "outputs": [
@@ -1077,9 +1069,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Buffalo Bills will score 15.5\n",
-      "New England Patriots will score 15.4\n",
-      "Buffalo Bills are the WINNERS!!!\n"
+      "Buffalo Bills will score 20.0\n",
+      "New England Patriots will score 24.0\n",
+      "New England Patriots are the WINNERS!!!\n"
      ]
     }
    ],
@@ -1089,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "id": "9d20ff31",
    "metadata": {},
    "outputs": [
@@ -1097,9 +1089,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Buffalo Bills will score 15.5\n",
-      "New England Patriots will score 15.4\n",
-      "Buffalo Bills are the WINNERS!!!\n"
+      "Buffalo Bills will score 20.0\n",
+      "New England Patriots will score 24.0\n",
+      "New England Patriots are the WINNERS!!!\n"
      ]
     }
    ],
