saving the models

--- a/GradienBoostingScore.ipynb
+++ b/GradienBoostingScore.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 37,
    "id": "5a63c5c3",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import os"
+    "import os\n",
+    "import pickle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 38,
    "id": "80b01efe",
    "metadata": {},
    "outputs": [
@@ -217,7 +218,7 @@
        "4    92.0   2.0    13.76    -6.71   -0.05  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 39,
    "id": "0784c6b3",
    "metadata": {},
    "outputs": [
@@ -777,7 +778,7 @@
        "4                             0  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -823,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
    "id": "fc1fc351",
    "metadata": {},
    "outputs": [
@@ -839,12 +840,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.952466688204058\n"
+      "4.389757876333546\n"
      ]
     }
    ],
    "source": [
-    "#MLPRegressor\n",
+    "#Gradient Booster Regressor\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import GradientBoostingRegressor\n",
     "from sklearn.metrics import r2_score, mean_squared_error, mean_absolute_error\n",
@@ -866,7 +867,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 41,
+   "id": "37bad3e9-6241-4e7f-ba22-356ec0e8f0ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Pkl_GB_model = 'GB_model.sav'\n",
+    "pickle.dump(GB_model, open(Pkl_GB_model, 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "id": "5a579f1f",
    "metadata": {},
    "outputs": [],
