--- a/LRmodel.ipynb
+++ b/LRmodel.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "id": "bcaa21e5",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import os"
+    "import os\n",
+    "import pickle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "id": "2ffbbe28",
    "metadata": {},
    "outputs": [
@@ -217,7 +218,7 @@
        "4    92.0   2.0    13.76    -6.71   -0.05  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "id": "39a15c07",
    "metadata": {},
    "outputs": [
@@ -766,7 +767,7 @@
        "4                             0  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "id": "a13c3a82",
    "metadata": {},
    "outputs": [
@@ -811,7 +812,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9.217391304347826\n"
+      "8.73913043478261\n"
      ]
     },
     {
@@ -845,7 +846,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 31,
+   "id": "dd6e28db-2b8b-4f14-99d9-97a28344bfc4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fit the model on training set\n",
+    "#     model = LogisticRegression()\n",
+    "#     model.fit(X_train, Y_train)\n",
+    "# save the model to disk\n",
+    "Pkl_LR_model = 'LR_model.sav'\n",
+    "pickle.dump(LR_model, open(Pkl_LR_model, 'wb'))\n",
+    " \n",
+    "# some time later...\n",
+    " \n",
+    "# load the model from disk\n",
+    "\n",
+    "#loaded_model = pickle.load(open(filename, 'rb'))\n",
+    "#result = loaded_model.score(X_test, Y_test)\n",
+    "#print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "id": "3fea6ee4",
    "metadata": {},
    "outputs": [],
@@ -925,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "id": "0ea06fef",
    "metadata": {},
    "outputs": [
