--- a/MLPRegressor.ipynb
+++ b/MLPRegressor.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "0b86cde1",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import os"
+    "import os\n",
+    "import pickle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "31d8905e",
    "metadata": {},
    "outputs": [
@@ -217,7 +218,7 @@
        "4    92.0   2.0    13.76    -6.71   -0.05  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "68eb9fb3",
    "metadata": {},
    "outputs": [
@@ -777,7 +778,7 @@
        "4                             0  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -814,88 +815,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "eca8101c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 224 entries, 0 to 223\n",
-      "Data columns (total 58 columns):\n",
-      " #   Column                        Non-Null Count  Dtype  \n",
-      "---  ------                        --------------  -----  \n",
-      " 0   TmScore                       224 non-null    float64\n",
-      " 1   O_1stD                        224 non-null    float64\n",
-      " 2   O_Tot_yd                      224 non-null    float64\n",
-      " 3   O_P_Yd                        224 non-null    float64\n",
-      " 4   O_R_Yd                        224 non-null    float64\n",
-      " 5   O_TO                          224 non-null    float64\n",
-      " 6   D_1stD                        224 non-null    float64\n",
-      " 7   D_Tot_Yd                      224 non-null    float64\n",
-      " 8   D_P_Yd                        224 non-null    float64\n",
-      " 9   D_R_Yd                        224 non-null    float64\n",
-      " 10  D_TO                          224 non-null    float64\n",
-      " 11  Home                          224 non-null    int64  \n",
-      " 12  Team_Arizona Cardinals        224 non-null    uint8  \n",
-      " 13  Team_Buffalo Bills            224 non-null    uint8  \n",
-      " 14  Team_Cincinnati Bengals       224 non-null    uint8  \n",
-      " 15  Team_Dallas Cowboys           224 non-null    uint8  \n",
-      " 16  Team_Green Bay Packers        224 non-null    uint8  \n",
-      " 17  Team_Kansas City Chiefs       224 non-null    uint8  \n",
-      " 18  Team_Las Vegas Raiders        224 non-null    uint8  \n",
-      " 19  Team_Los Angeles Rams         224 non-null    uint8  \n",
-      " 20  Team_New England Patriots     224 non-null    uint8  \n",
-      " 21  Team_Philadelphia Eagles      224 non-null    uint8  \n",
-      " 22  Team_Pittsburgh Steelers      224 non-null    uint8  \n",
-      " 23  Team_San Francisco 49ers      224 non-null    uint8  \n",
-      " 24  Team_Tampa Bay Buccaneers     224 non-null    uint8  \n",
-      " 25  Team_Tennessee Titans         224 non-null    uint8  \n",
-      " 26  Opp_Arizona Cardinals         224 non-null    uint8  \n",
-      " 27  Opp_Atlanta Falcons           224 non-null    uint8  \n",
-      " 28  Opp_Baltimore Ravens          224 non-null    uint8  \n",
-      " 29  Opp_Buffalo Bills             224 non-null    uint8  \n",
-      " 30  Opp_Carolina Panthers         224 non-null    uint8  \n",
-      " 31  Opp_Chicago Bears             224 non-null    uint8  \n",
-      " 32  Opp_Cincinnati Bengals        224 non-null    uint8  \n",
-      " 33  Opp_Cleveland Browns          224 non-null    uint8  \n",
-      " 34  Opp_Dallas Cowboys            224 non-null    uint8  \n",
-      " 35  Opp_Denver Broncos            224 non-null    uint8  \n",
-      " 36  Opp_Detroit Lions             224 non-null    uint8  \n",
-      " 37  Opp_Green Bay Packers         224 non-null    uint8  \n",
-      " 38  Opp_Houston Texans            224 non-null    uint8  \n",
-      " 39  Opp_Indianapolis Colts        224 non-null    uint8  \n",
-      " 40  Opp_Jacksonville Jaguars      224 non-null    uint8  \n",
-      " 41  Opp_Kansas City Chiefs        224 non-null    uint8  \n",
-      " 42  Opp_Las Vegas Raiders         224 non-null    uint8  \n",
-      " 43  Opp_Los Angeles Chargers      224 non-null    uint8  \n",
-      " 44  Opp_Los Angeles Rams          224 non-null    uint8  \n",
-      " 45  Opp_Miami Dolphins            224 non-null    uint8  \n",
-      " 46  Opp_Minnesota Vikings         224 non-null    uint8  \n",
-      " 47  Opp_New England Patriots      224 non-null    uint8  \n",
-      " 48  Opp_New Orleans Saints        224 non-null    uint8  \n",
-      " 49  Opp_New York Giants           224 non-null    uint8  \n",
-      " 50  Opp_New York Jets             224 non-null    uint8  \n",
-      " 51  Opp_Philadelphia Eagles       224 non-null    uint8  \n",
-      " 52  Opp_Pittsburgh Steelers       224 non-null    uint8  \n",
-      " 53  Opp_San Francisco 49ers       224 non-null    uint8  \n",
-      " 54  Opp_Seattle Seahawks          224 non-null    uint8  \n",
-      " 55  Opp_Tampa Bay Buccaneers      224 non-null    uint8  \n",
-      " 56  Opp_Tennessee Titans          224 non-null    uint8  \n",
-      " 57  Opp_Washington Football Team  224 non-null    uint8  \n",
-      "dtypes: float64(11), int64(1), uint8(46)\n",
-      "memory usage: 31.2 KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "mlp_model_data.info()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "3762835a",
    "metadata": {},
@@ -905,23 +824,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "id": "337021c8",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.573213221445813\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "/opt/anaconda3/envs/dev/lib/python3.7/site-packages/sklearn/utils/validation.py:73: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
       "  return f(**kwargs)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5.255425309466114\n"
      ]
     }
    ],
@@ -948,7 +867,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
+   "id": "05e4dee2-e03d-44e3-a34b-3addde3b4e5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Pkl_MLP_model = 'MLP_model.sav'\n",
+    "pickle.dump(MLP_model, open(Pkl_MLP_model, 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "id": "ca89f9df",
    "metadata": {},
    "outputs": [],
