--- a/testing_notebook.ipynb
+++ b/testing_notebook.ipynb
@@ -35,6 +35,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import numpy as np\n",
+    "import pickle\n",
     "\n",
     "st.title('NFL Football Stats and Predictor')\n",
     "\n",
@@ -271,6 +272,60 @@
     "#load model in streamlit\n",
     "model = pickle.load(open('model.sav', 'rb'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dbc620d9-1427-4139-837e-714124d4c797",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fit the model on training set\n",
+    "model = LogisticRegression()\n",
+    "model.fit(X_train, Y_train)\n",
+    "# save the model to disk\n",
+    "filename = 'finalized_model.sav'\n",
+    "pickle.dump(model, open(filename, 'wb'))\n",
+    " \n",
+    "# some time later...\n",
+    " \n",
+    "# load the model from disk\n",
+    "loaded_model = pickle.load(open(filename, 'rb'))\n",
+    "result = loaded_model.score(X_test, Y_test)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74919cdc-7d0e-4309-82f1-9ee913107818",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e865c37-daf5-4020-90e6-3df331f49c97",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1faf1d71-09e3-4b0b-b914-6bbc5652a792",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec9bd60a-a545-45f6-ae82-b143661ec966",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
