worked on Dashboard

--- a/MLPRegressor.ipynb
+++ b/MLPRegressor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "id": "0b86cde1",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "id": "31d8905e",
    "metadata": {},
    "outputs": [
@@ -218,7 +218,7 @@
        "4    92.0   2.0    13.76    -6.71   -0.05  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "id": "68eb9fb3",
    "metadata": {},
    "outputs": [
@@ -778,7 +778,7 @@
        "4                             0  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "id": "337021c8",
    "metadata": {},
    "outputs": [
@@ -832,7 +832,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.573213221445813\n"
+      "5.334229548536946\n"
      ]
     },
     {
@@ -867,13 +867,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "id": "05e4dee2-e03d-44e3-a34b-3addde3b4e5b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Pkl_MLP_model = 'MLP_model.sav'\n",
-    "pickle.dump(MLP_model, open(Pkl_MLP_model, 'wb'))"
+    "Pkl_MLP_model = open('MLP_model.pkl', 'wb')\n",
+    "pickle.dump(MLP_model, Pkl_MLP_model)\n",
+    "Pkl_MLP_model.close()"
    ]
   },
   {
